--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/material": "^5.6.4",
     "gatsby": "^4.13.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-plugin-netlify-cms": "^6.13.0",
+    "gatsby-plugin-sharp": "^4.13.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.13.0",
     "netlify-cms-app": "^2.15.72",
     "react": "^17.0.1",
