--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mui/material": "^5.6.4",
+    "gapi-script": "^1.2.0",
     "gatsby": "^4.13.0",
+    "gatsby-plugin-gatsby-cloud": "^4.13.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-mdx": "^3.13.0",
@@ -29,8 +31,13 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
+    "googleapis": "^100.0.0",
     "netlify-cms-app": "^2.15.72",
+    "node-fetch": "^2.6.7",
+    "query-string": "^7.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
+    "react-router-dom": "^6.3.0"
   }
 }
