--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.6.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/mdx": "^1.6.22",
@@ -28,8 +29,9 @@
     "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-plugin-netlify-cms": "^6.13.0",
     "gatsby-plugin-sharp": "^4.13.0",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "googleapis": "^100.0.0",
     "netlify-cms-app": "^2.15.72",
