--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.8.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "gapi-script": "^1.2.0",
     "gatsby": "^4.13.0",
