--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@reduxjs/toolkit": "^1.8.1",
     "gapi-script": "^1.2.0",
     "gatsby": "^4.13.0",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
@@ -41,6 +42,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
-    "react-router-dom": "^6.3.0"
+    "react-hook-form": "^7.31.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "sharp": "^0.30.4"
   }
 }
