--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.31.0",
+    "react-netlify-forms": "^1.3.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "sharp": "^0.30.4"
