--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-mdx": "^3.13.0",
     "gatsby-plugin-netlify-cms": "^6.13.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-remark-highlight-code": "^3.2.0",
     "gatsby-source-filesystem": "^4.13.0",
@@ -46,6 +47,8 @@
     "react-netlify-forms": "^1.3.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
+    "react-scroll-parallax": "^3.2.0",
+    "sal.js": "^0.8.5",
     "sharp": "^0.30.4"
   }
 }
